# AutoResearchAnything

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  regression.yml
aura/: __init__.py  __main__.py  artifacts.py  cli.py  decorators.py  interfaces.py  pipeline.py  runner.py  types.py  workspace.py
aura/components/: __init__.py  aggregators.py  environments.py  evaluators.py  executors.py  llm.py  researchers.py  reviewers.py  runners.py
aura/components/backends/: __init__.py  collector_backends.py  executor_backends.py
aura/utils/: logging.py  parsing.py
docs/: architecture.md
docs/specs/: 2026-03-13-skill-eval-pipeline-design.md
examples/mock-autonas/: mock_train.py  pyproject.toml  run.py
examples/mock-autonas-cli/: run.py
examples/runner-showcase/: run.py
tests/: conftest.py  test_aggregators.py  test_artifacts.py  test_backends.py  test_cli.py  test_components.py  test_composed.py  test_decorators.py  test_interfaces.py  test_lifecycle.py  test_pipeline.py  test_regression.py  test_runner.py  test_runners.py  test_types.py  test_utils.py  test_workspace.py
tests/scripts/: mock_train_reg.py
