[project]
name = "aura"
version = "0.1.0"
description = "Domain-agnostic iterative pipeline framework for auto research"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
]

[project.scripts]
aura = "aura.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["aura"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
